required-resourcequota/ns-with-quota.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bounded-namespace
