required-resourcequota/blocked-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blocked-pod
  namespace: unbounded-namespace
spec:
  containers:
  - image: nginx
    name: blocked-pod
